<resources>
    <!-- Strings related to login -->
    <string name="app_name" translatable="false">Geo5Solutions</string>
    <!-- Strings related to login / register -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Email address is invalid</string>
    <string name="error_invalid_username">Invalid username</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_incorrect_password">Password is incorrect</string>
    <string name="error_field_required">Field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="google_maps_api_key" translatable="false">AIzaSyAiKze6w7QA5_qRGU9VdRv3eMce2Fufb0Q</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change language</string>
    <string name="delete_account">Delete account</string>
    <string name="manage_account">Manage account</string>
    <string name="delete_success">Delete successfully</string>
    <string name="failed_delete">Failed to delete user</string>
    <string name="password">Password</string>
    <string name="street">Street</string>
    <string name="place">Place</string>
    <string name="country">Country</string>
    <string name="name">Name</string>
    <string name="update_success">Successfully updated!</string>
    <string name="error_occurred">An error occurred</string>
    <string name="user_profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="path_manager">Path manager</string>
    <string name="languages">Languages</string>
    <string name="invalid_field">Invalid field!</string>
    <string name="password_mismatch">Password mismatch!</string>
    <string name="login_success">Login successfully!</string>
    <string name="error_invalid_username_password">Invalid username or password!</string>
    <string name="register_success">Register successfully!</string>
    <string name="invalid_register">Could not register, verify all fields.</string>
    <string name="logout_success">Logout successfully!</string>
    <string name="password_requirement">Password must have at least 7 characters.</string>
    <string name="user_photo">User photo</string>
    <string name="username" translatable="false">Username</string>
    <string name="map">Map</string>
    <string name="from">From</string>
    <string name="go" translatable="false">GO!</string>
    <string name="to">To</string>
    <string name="waypoint" translatable="false">Waypoint</string>
    <string name="create_path">Create Path</string>
    <string name="add_marker">Add Marker</string>
    <string name="app_motto">Making your exploration dreams come true</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="zip_code" >Zip_code</string>
    <string name="confirm_delete">Are you sure you want to delete the account?</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
</resources>
