<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditUserProfileActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/editUser_toolbar"/>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ProgressBar
            android:id="@+id/update_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/update_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="70dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/edit_photo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:scaleType="centerCrop"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/user_photo" />

                <TextView
                    android:id="@+id/name_string"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/edit_photo"
                    android:text="@string/name"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_string"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:autofillHints=""
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/password_string"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_name"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/password"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password_string"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:autofillHints=""
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/email_string"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_password"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/prompt_email"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/email_string"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:autofillHints=""
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/street_string"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_email"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/street"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/street_string"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:autofillHints=""
                    android:hint="@string/street"
                    android:inputType="text"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/place_string"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_street"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/place"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/place_string"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:autofillHints=""
                    android:hint="@string/place"
                    android:inputType="text"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/country_string"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_place"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/country"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/country_string"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:autofillHints=""
                    android:hint="@string/country"
                    android:inputType="text"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/zip_code_string"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_country"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/zip_code"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_zip_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/zip_code_string"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:autofillHints=""
                    android:hint="@string/zip_code"
                    android:inputType="text"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/birthday_string"
                    android:layout_below="@id/edit_zip_code"
                    android:layout_centerHorizontal="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/birthday"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/edit_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/birthday_string"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:hint="@string/birthday"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:textSize="20sp" />
                <!--                    android:autofillHints=""-->
                <!--                    android:inputType="date"-->

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="16dp"
                    app:srcCompat="@android:drawable/ic_menu_save" />

                <View
                    android:id="@+id/divider"
                    android:layout_below="@id/edit_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider"
                    android:text="@string/delete_account" />

                <EditText
                    android:id="@+id/delete_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/delete_button"
                    android:autofillHints=""
                    android:hint="@string/username"
                    android:inputType="text"
                    android:visibility="gone" />
            </RelativeLayout>

        </ScrollView>

    </android.support.design.widget.CoordinatorLayout>

</android.support.design.widget.CoordinatorLayout>