<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".UserProfileActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/userProfile_toolbar" />

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserProfileActivity"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/profile_pic"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:paddingTop="50dp"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/user_photo" />
                <!--                    android:src="@drawable/alan_grant"-->

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/name_string"
                android:layout_below="@id/profile_pic"
                android:layout_alignParentStart="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/name"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/name_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/email_string"
                android:layout_alignParentStart="true"
                android:layout_below="@id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/useremail"
                android:layout_alignParentStart="true"
                android:layout_below="@id/email_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:textSize="20sp"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/address_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/useremail"
                android:text="@string/address"
                android:textStyle="bold"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/address_string"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/birthday_string"
                android:text="@string/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/address"
                android:textStyle="bold"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/birthday_string"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:textSize="20sp" />

<!--            <TextView-->
<!--                android:id="@+id/street_string"-->
<!--                android:layout_alignParentStart="true"-->
<!--                android:layout_below="@id/useremail"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/street"-->
<!--                android:textStyle="bold"-->
<!--                android:textSize="24sp"-->
<!--                android:layout_alignParentLeft="true" />-->

<!--            <TextView-->
<!--                android:id="@+id/street"-->
<!--                android:layout_alignParentStart="true"-->
<!--                android:layout_below="@id/street_string"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:paddingStart="@dimen/activity_horizontal_margin"-->
<!--                android:paddingEnd="@dimen/activity_horizontal_margin"-->
<!--                android:textSize="20sp"-->
<!--                android:layout_alignParentLeft="true" />-->

<!--            <TextView-->
<!--                android:id="@+id/place_string"-->
<!--                android:layout_alignParentStart="true"-->
<!--                android:layout_below="@id/street"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/place"-->
<!--                android:textStyle="bold"-->
<!--                android:textSize="24sp"-->
<!--                android:layout_alignParentLeft="true" />-->

<!--            <TextView-->
<!--                android:id="@+id/place"-->
<!--                android:layout_alignParentStart="true"-->
<!--                android:layout_below="@id/place_string"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:paddingStart="@dimen/activity_horizontal_margin"-->
<!--                android:paddingEnd="@dimen/activity_horizontal_margin"-->
<!--                android:textSize="20sp"-->
<!--                android:layout_alignParentLeft="true" />-->

<!--            <TextView-->
<!--                android:id="@+id/country_string"-->
<!--                android:layout_alignParentStart="true"-->
<!--                android:layout_below="@id/place"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textStyle="bold"-->
<!--                android:text="@string/country"-->
<!--                android:textSize="24sp"-->
<!--                android:layout_alignParentLeft="true" />-->

<!--            <TextView-->
<!--                android:id="@+id/country"-->
<!--                android:layout_alignParentStart="true"-->
<!--                android:layout_below="@id/country_string"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:paddingStart="@dimen/activity_horizontal_margin"-->
<!--                android:paddingEnd="@dimen/activity_horizontal_margin"-->
<!--                android:textSize="20sp"-->
<!--                android:layout_alignParentLeft="true" />-->

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/birthday"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="16dp"
                android:src="@android:drawable/ic_menu_edit" />

        </RelativeLayout>
    </ScrollView>
        </android.support.design.widget.CoordinatorLayout>

</android.support.design.widget.CoordinatorLayout>